--- a/html/login_2.html
+++ b/html/login_2.html
@@ -8,10 +8,55 @@
   <link rel="icon" href="images/logo.jpg">
 
 </head>
+<style>
+  /* Premium Auth Notification */
+  #auth-notification {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-100%);
+    background: rgba(20, 20, 20, 0.95);
+    backdrop-filter: blur(10px);
+    border: 1px solid #D4AF37;
+    padding: 15px 30px;
+    border-radius: 50px;
+    box-shadow: 0 0 20px rgba(212, 175, 55, 0.3);
+    z-index: 2147483647 !important;
+    /* Max Z-Index */
+    display: none;
+    /* Controlled by JS */
+    align-items: center;
+    gap: 15px;
+    min-width: 320px;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  /* .show class removed, handled by JS directly for debugging */
+
+  #auth-notification i {
+    color: #D4AF37;
+    font-size: 1.2rem;
+  }
+
+  #auth-notification span {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.95rem;
+    letter-spacing: 0.5px;
+    font-weight: 500;
+  }
+</style>
 
 <body>
-  <script>localStorage.removeItem('currentUser');</script>
+  <!-- Removed auto-clear to prevent session loss on reload loops -->
   <img src="../images/logo-removebg.png" width="20%" class="top_logo"></img>
+
+  <!-- Notification Element -->
+  <div id="auth-notification">
+    <i class="fas fa-lock"></i>
+    <span>Exclusive Access. Please Login First.</span>
+  </div>
   <div class="hero">
     <video autoplay loop muted plays-inline class="back-video">
       <source src="../images/ok.mp4">
@@ -72,110 +117,147 @@
 
 
   <script>
-    const loginForm = document.querySelector("#loginForm");
-    const signupForm = document.querySelector("#signupForm");
-    const loginBtn = document.querySelector("label.login");
-    const signupBtn = document.querySelector("label.signup");
-    const loginText = document.querySelector(".title-text .login");
-    const signupText = document.querySelector(".title-text .signup");
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log("DOM Loaded. Initializing Login Script...");
 
-    signupBtn.onclick = (() => {
-      loginForm.style.marginLeft = "-50%";
-      loginText.style.marginLeft = "-50%";
-    });
-    loginBtn.onclick = (() => {
-      loginForm.style.marginLeft = "0%";
-      loginText.style.marginLeft = "0%";
-    });
+      const loginForm = document.querySelector("#loginForm");
+      const signupForm = document.querySelector("#signupForm");
+      const loginBtn = document.querySelector("label.login");
+      const signupBtn = document.querySelector("label.signup");
+      const loginText = document.querySelector(".title-text .login");
+      const signupLink = document.querySelector("form .signup-link a"); // Adjust if selector is wrong, but using generic specific selectors
 
-    signupText.onclick = (() => {
-      signupBtn.click();
-      return false;
-    });
-    loginText.onclick = (() => {
-      loginBtn.click();
-      return false;
-    });
-
-    // LOGIN FORM VALIDATION
-    loginForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = loginForm.querySelector('input[name="email"]').value;
-      const password = loginForm.querySelector('input[name="password"]').value;
-
-      if (email === "" || password === "") {
-        alert("Please fill in all fields.");
-        return;
-      }
-
-      try {
-        // CALL BACKEND API
-        const response = await fetch('http://localhost:3000/login', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ email, password })
+      // UI Toggles
+      if (signupBtn && loginForm && loginText) {
+        signupBtn.onclick = (() => {
+          loginForm.style.marginLeft = "-50%";
+          loginText.style.marginLeft = "-50%";
         });
-
-        const data = await response.json();
-
-        if (data.success) {
-          alert("Login Successful! Welcome back.");
-          // Store user in localstorage for dashboard usage if needed
-          localStorage.setItem('currentUser', JSON.stringify(data.user));
-          window.location.href = "dashboard.html";
-        } else {
-          alert("Login Failed: " + data.message);
-        }
-
-      } catch (error) {
-        console.error("Error:", error);
-        alert("Something went wrong. Is the server running?");
-      }
-    });
-
-    // SIGNUP FORM VALIDATION
-    signupForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = signupForm.querySelector('input[name="email"]').value;
-      const password = signupForm.querySelector('input[name="password"]').value;
-      const confirmPassword = signupForm.querySelector('input[name="confirmPassword"]').value;
-
-      if (email === "" || password === "" || confirmPassword === "") {
-        alert("Please fill in all fields.");
-        return;
       }
 
-      if (password !== confirmPassword) {
-        alert("Passwords do not match!");
-        return;
-      }
-
-      if (password.length < 6) {
-        alert("Password must be at least 6 characters long.");
-        return;
-      }
-
-      try {
-        // CALL BACKEND API
-        const response = await fetch('http://localhost:3000/signup', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ email, password })
+      if (loginBtn && loginForm && loginText) {
+        loginBtn.onclick = (() => {
+          loginForm.style.marginLeft = "0%";
+          loginText.style.marginLeft = "0%";
         });
+      }
 
-        const data = await response.json();
+      if (signupLink && signupBtn) {
+        signupLink.onclick = (() => {
+          signupBtn.click();
+          return false;
+        });
+      }
 
-        if (data.success) {
-          alert("Account Created Successfully! Please login with your new credentials.");
-          // Switch to Login Tab
-          loginBtn.click();
-          signupForm.reset();
-        } else {
-          alert("Signup Failed: " + data.message);
+      // --- LOGIN LOGIC ---
+      if (loginForm) {
+        loginForm.addEventListener('submit', async (e) => {
+          e.preventDefault(); // STOP RELOAD
+          console.log("Login Form Submitted");
+
+          const emailInput = loginForm.querySelector('input[name="email"]');
+          const passwordInput = loginForm.querySelector('input[name="password"]');
+
+          const email = emailInput ? emailInput.value : "";
+          const password = passwordInput ? passwordInput.value : "";
+
+          if (email === "" || password === "") {
+            alert("Please fill in all fields.");
+            return;
+          }
+
+          try {
+            const response = await fetch('http://localhost:3000/login', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ email, password })
+            });
+
+            const data = await response.json();
+            console.log("Login Response:", data);
+
+            if (data.success) {
+              alert("Login Successful!");
+              localStorage.setItem('currentUser', JSON.stringify(data.user));
+
+              // Force Redirect
+              window.location.replace("dashboard.html");
+            } else {
+              alert("Login Failed: " + data.message);
+            }
+          } catch (error) {
+            console.error("Login Error:", error);
+            alert("Server Error. Check console.");
+          }
+        });
+      } else {
+        console.error("Login Form Not Found!");
+      }
+
+      // --- SIGNUP LOGIC ---
+      if (signupForm) {
+        signupForm.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          console.log("Signup Form Submitted");
+
+          const email = signupForm.querySelector('input[name="email"]').value;
+          const password = signupForm.querySelector('input[name="password"]').value;
+          const confirmPassword = signupForm.querySelector('input[name="confirmPassword"]').value;
+
+          if (email === "" || password === "" || confirmPassword === "") {
+            alert("Please fill in all fields.");
+            return;
+          }
+          if (password !== confirmPassword) {
+            alert("Passwords do not match!");
+            return;
+          }
+
+          try {
+            const response = await fetch('http://localhost:3000/signup', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ email, password })
+            });
+            const data = await response.json();
+
+            if (data.success) {
+              alert("Signup Successful! Please Login.");
+              if (loginBtn) loginBtn.click();
+              signupForm.reset();
+            } else {
+              alert("Signup Failed: " + data.message);
+            }
+          } catch (error) {
+            console.error("Signup Error:", error);
+            alert("Server Error.");
+          }
+        });
+      }
+
+      // --- AUTH REDIRECT NOTIFICATION ---
+      const urlParams = new URLSearchParams(window.location.search);
+      const hasAuthParam = urlParams.has('auth') && urlParams.get('auth') === 'required';
+      const hasAuthString = window.location.href.includes('auth=required');
+
+      if (hasAuthParam || hasAuthString) {
+        const notif = document.getElementById('auth-notification');
+        if (notif) {
+          notif.style.display = 'flex';
+          notif.style.opacity = '0';
+          notif.style.transform = 'translateX(-50%) translateY(-100px)';
+
+          requestAnimationFrame(() => {
+            notif.style.transition = 'transform 0.5s ease, opacity 0.5s ease';
+            notif.style.opacity = '1';
+            notif.style.transform = 'translateX(-50%) translateY(20px)';
+          });
+
+          setTimeout(() => {
+            notif.style.opacity = '0';
+            notif.style.transform = 'translateX(-50%) translateY(-100px)';
+          }, 4000);
         }
-      } catch (error) {
-        console.error("Error:", error);
-        alert("Something went wrong. Is the server running?");
       }
     });
   </script>
