--- a/html/rolls_royce.html
+++ b/html/rolls_royce.html
@@ -120,24 +120,28 @@
     </style>
     <script>
         // AUTH GUARD (Run immediately)
-        const userStr = localStorage.getItem('currentUser');
-        let isValidUser = false;
-        if (userStr && userStr !== 'null' && userStr !== 'undefined') {
-            try {
-                const user = JSON.parse(userStr);
-                if (user && user.email) isValidUser = true;
-            } catch (e) {
-                console.error("Auth Error", e);
-            }
-        }
+        (function () {
+            const userStr = localStorage.getItem('currentUser');
+            let isValidUser = false;
 
-        if (!isValidUser) {
-            window.location.href = "login_2.html?auth=required";
-        } else {
-            document.addEventListener('DOMContentLoaded', () => {
-                document.body.style.display = 'block';
-            });
-        }
+            if (userStr) {
+                try {
+                    const user = JSON.parse(userStr);
+                    if (user && user.email && user.id) isValidUser = true;
+                } catch (e) {
+                    console.error("Auth Guard Error", e);
+                    localStorage.removeItem('currentUser');
+                }
+            }
+
+            if (!isValidUser) {
+                window.location.href = "login_2.html?auth=required";
+            } else {
+                document.addEventListener('DOMContentLoaded', () => {
+                    document.body.style.display = 'block';
+                });
+            }
+        })();
     </script>
 </head>
 
