--- a/html/lambo.html
+++ b/html/lambo.html
@@ -353,7 +353,7 @@
             };
 
             try {
-                const response = await fetch('http://localhost:3000/book', {
+                const response = await fetch('/book', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(bookingData)
