--- a/html/login_2.html
+++ b/html/login_2.html
@@ -167,7 +167,7 @@
           }
 
           try {
-            const response = await fetch('http://localhost:3000/login', {
+            const response = await fetch('/login', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ email, password })
@@ -214,7 +214,7 @@
           }
 
           try {
-            const response = await fetch('http://localhost:3000/signup', {
+            const response = await fetch('/signup', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ email, password })
