--- a/html/rolls_royce.html
+++ b/html/rolls_royce.html
@@ -341,7 +341,7 @@
             };
 
             try {
-                const response = await fetch('http://localhost:3000/book', {
+                const response = await fetch('/book', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(bookingData)
